🎞🦥 Added lazyLoading script and images

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,8 +40,25 @@
       </nav>
       <p class="currentDate"></p>
     </header>
-    <main>
-
+    <main class="discovery-main">
+        <picture>
+            <img src="images/placeholder.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
+        </picture>
+        <picture>
+            <img src="images/placeholder.png" data-src="images/bar_do_alemão.jpg" alt="Bar do Alemão">
+        </picture>
+        <picture>
+            <img src="images/placeholder.png" data-src="images/mega_pizza.jpg" alt="Mega Pizza">
+        </picture>
+        <picture>
+            <img src="images/placeholder.png" data-src="images/macromix_fora.jpg" alt="Macromix">
+        </picture>
+        <picture>
+            <img src="images/placeholder.png" data-src="images/the_hangout.jpg" alt="The Hangout">
+        </picture>
+        <picture>
+            <img src="images/placeholder.png" data-src="images/cia_do_sabor.jpg" alt="Cia do Sabor">
+        </picture>        
     </main>
     <footer>
         <div class="footer-commerce-info">
@@ -64,5 +81,6 @@
     <script src="js/getCurrentDate.js"></script>
     <script src="js/getDay.js"></script>
     <script src="js/windChill.js"></script>
+    <script src="js/lazyLoading.js"></script>
 </body>
 </html>
