✍🏽 Added divs, headers and descriptions for all discovery sections

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,24 +41,55 @@
       <p class="currentDate"></p>
     </header>
     <main class="discovery-main">
-        <picture>
-            <img src="images/placeholder.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
-        </picture>
-        <picture>
-            <img src="images/placeholder.png" data-src="images/bar_do_alemão.jpg" alt="Bar do Alemão">
-        </picture>
-        <picture>
-            <img src="images/placeholder.png" data-src="images/mega_pizza.jpg" alt="Mega Pizza">
-        </picture>
-        <picture>
-            <img src="images/placeholder.png" data-src="images/macromix_fora.jpg" alt="Macromix">
-        </picture>
-        <picture>
-            <img src="images/placeholder.png" data-src="images/the_hangout.jpg" alt="The Hangout">
-        </picture>
-        <picture>
-            <img src="images/placeholder.png" data-src="images/cia_do_sabor.jpg" alt="Cia do Sabor">
-        </picture>        
+        <div class="discovery-1">
+            <picture>
+                <img src="images/placeholder.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
+            </picture>
+            <h2>Unisinos University</h2>
+            <p>Unisinos (Portuguese: Universidade do Vale do Rio dos Sinos -- literally "University of Bells' River Valley") 
+                is a Brazilian private Jesuit university founded in 1969. Unisinos has more than 30,000 students in its 91 
+                undergraduate programs, 19 academic master's programs, 6 professional master's programs, and 14 PhD programs, 
+                with six schools – Polytechnic, Business, Law, Health, Creative Industry, and Humanities.</p>
+        </div>
+        <div class="discovery-2">
+            <picture>
+                <img src="images/placeholder.png" data-src="images/bar_do_alemão.jpg" alt="Bar do Alemão">
+            </picture>
+            <h2>Bar do Alemão</h2>
+            <p>Bar do Alemão is a very popular pub between Unisinos University's students and young workers in the region. 
+                They have ice cold beer, table pool, sometimes live music and great prices.
+            </p>
+        </div>
+        <div class="discovery-3">
+            <picture>
+                <img src="images/placeholder.png" data-src="images/mega_pizza.jpg" alt="Mega Pizza">
+            </picture>
+            <h2>Mega Pizza</h2>
+            <p>Best all-you-can-eat pizza place in the region with prices starting from R$56.90</p>
+        </div>
+        <div class="discovery-4">
+            <picture>
+                <img src="images/placeholder.png" data-src="images/macromix_fora.jpg" alt="Macromix">
+            </picture>
+            <h2>Macromix</h2>
+            <p>Macromix is a wholesale supermarket with stores all over Brazil. With great variety of products and 
+                prices. Their establishment in São Leopoldo is their newest branch in the region.</p>
+        </div>
+        <div class="discovery-5">
+            <picture>
+                <img src="images/placeholder.png" data-src="images/the_hangout.jpg" alt="The Hangout">
+            </picture>
+            <h2>The Hangout</h2>
+            <p>The Hangout is a cozy place to relax, study, meet friends, practice English, have a coffee, and co-work.</p>
+        </div>
+        <div class="discovery-6">
+            <picture>
+                <img src="images/placeholder.png" data-src="images/cia_do_sabor.jpg" alt="Cia do Sabor">
+            </picture>  
+            <h2>Cia do Sabor</h2>  
+            <p>Cia do Sabor is a pizza place with a specialty with artisan pizza. They have an all-you-can-eat deals 
+                starting from R$63,90.</p>    
+        </div>
     </main>
     <footer>
         <div class="footer-commerce-info">
