🎫 Added reference to placeholder images

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,7 +43,7 @@
     <main class="discovery-main">
         <div class="discovery-1">
             <picture>
-                <img src="images/placeholder.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
+                <img src="images/placeholder-unisinos.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
             </picture>
             <h2>Unisinos University</h2>
             <p>Unisinos (Portuguese: Universidade do Vale do Rio dos Sinos -- literally "University of Bells' River Valley") 
@@ -53,7 +53,7 @@
         </div>
         <div class="discovery-2">
             <picture>
-                <img src="images/placeholder.png" data-src="images/bar_do_alemão.jpg" alt="Bar do Alemão">
+                <img src="images/placeholder-bar_do_alemão.png" data-src="images/bar_do_alemão.jpg" alt="Bar do Alemão">
             </picture>
             <h2>Bar do Alemão</h2>
             <p>Bar do Alemão is a very popular pub between Unisinos University's students and young workers in the region. 
@@ -62,14 +62,14 @@
         </div>
         <div class="discovery-3">
             <picture>
-                <img src="images/placeholder.png" data-src="images/mega_pizza.jpg" alt="Mega Pizza">
+                <img src="images/placeholder-mega_pizza.png" data-src="images/mega_pizza.jpg" alt="Mega Pizza">
             </picture>
             <h2>Mega Pizza</h2>
             <p>Best all-you-can-eat pizza place in the region with prices starting from R$56.90</p>
         </div>
         <div class="discovery-4">
             <picture>
-                <img src="images/placeholder.png" data-src="images/macromix_fora.jpg" alt="Macromix">
+                <img src="images/placeholder-macromix.png" data-src="images/macromix_fora.jpg" alt="Macromix">
             </picture>
             <h2>Macromix</h2>
             <p>Macromix is a wholesale supermarket with stores all over Brazil. With great variety of products and 
@@ -77,14 +77,14 @@
         </div>
         <div class="discovery-5">
             <picture>
-                <img src="images/placeholder.png" data-src="images/the_hangout.jpg" alt="The Hangout">
+                <img src="images/placeholder-the_hangout.png" data-src="images/the_hangout.jpg" alt="The Hangout">
             </picture>
             <h2>The Hangout</h2>
             <p>The Hangout is a cozy place to relax, study, meet friends, practice English, have a coffee, and co-work.</p>
         </div>
         <div class="discovery-6">
             <picture>
-                <img src="images/placeholder.png" data-src="images/cia_do_sabor.jpg" alt="Cia do Sabor">
+                <img src="images/placeholder-cia_do_sabor.png" data-src="images/cia_do_sabor.jpg" alt="Cia do Sabor">
             </picture>  
             <h2>Cia do Sabor</h2>  
             <p>Cia do Sabor is a pizza place with a specialty with artisan pizza. They have an all-you-can-eat deals 
