✍🏽 Added demographic data

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -41,13 +41,25 @@
       <p class="currentDate"></p>
     </header>
     <main class="discovery-main">
+        <h1>Discover São Leopoldo</h1>
+        <p>São Leopoldo is a Brazilian industrial city located in the south state of Rio Grande do Sul. </p>
+        <div class="demographic">
+            <h2>Demographics</h2>
+            <ul>
+                <li><strong>Population:</strong> 238,648 (2020)</li>
+                <li><strong>Elevation:</strong> 26 m (85 ft)</li>
+                <li><strong>Area:</strong> 102.313 km2 (39.503 sq mi)</li>
+                <li><strong>Time Zone:</strong> UTC-3</li>
+                <li><strong>City's Website: </strong><a href="https://www.saoleopoldo.rs.gov.br/"></a>Prefeitura de São Leopoldo</li>
+            </ul>
+        </div>
+        <img id="brasão" src="images/Brasão_São_Leopoldo.svg">
         <div class="discovery-1">
             <picture>
                 <img src="images/placeholder-unisinos.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
             </picture>
             <h2>Unisinos University</h2>
-            <p>Unisinos (Portuguese: Universidade do Vale do Rio dos Sinos -- literally "University of Bells' River Valley") 
-                is a Brazilian private Jesuit university founded in 1969. Unisinos has more than 30,000 students in its 91 
+            <p>Unisinos is a Brazilian private Jesuit university founded in 1969. Unisinos has more than 30,000 students in its 91 
                 undergraduate programs, 19 academic master's programs, 6 professional master's programs, and 14 PhD programs, 
                 with six schools – Polytechnic, Business, Law, Health, Creative Industry, and Humanities.</p>
         </div>
