✍🏽 alt to the city's coat of arms image

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -53,7 +53,7 @@
                 <li><strong>City's Website: </strong><a href="https://www.saoleopoldo.rs.gov.br/"></a>Prefeitura de São Leopoldo</li>
             </ul>
         </div>
-        <img id="brasão" src="images/Brasão_São_Leopoldo.svg">
+        <img id="brasão" src="images/Brasão_São_Leopoldo.svg" alt="São Leopoldo's Coat of Arms">
         <div class="discovery-1">
             <picture>
                 <img src="images/placeholder-unisinos.png" data-src="images/entrada_unisinos.jpg" alt="Unisinos University Entrance">
