✅ Added script to add local storage

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -123,7 +123,7 @@
     <script src="js/nav.js"></script>
     <script src="js/getCurrentDate.js"></script>
     <script src="js/getDay.js"></script>
-    <script src="js/windChill.js"></script>
     <script src="js/lazyLoading.js"></script>
+    <script src="js/localStorage.js"></script>
 </body>
 </html>
