✍🏽 Added a class to description

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,7 +42,7 @@
     </header>
     <main class="discovery-main">
         <h1>Discover São Leopoldo</h1>
-        <p>São Leopoldo is a Brazilian industrial city located in the south state of Rio Grande do Sul. </p>
+        <p class="description">São Leopoldo is a Brazilian industrial city located in the south state of Rio Grande do Sul. </p>
         <div class="demographic">
             <h2>Demographics</h2>
             <ul>
