--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>Lesson 04: <a href="chamber/index.html">🏠 Chamber Home Page</a></li>
                 <li>Lesson 05: <a href="lesson5/bom.html">📘 Book of Mormon - Top 25</a></li>
                 <li>Lesson 06: <a href="chamber/index.html">📐 Responsive Images</a></li>
-                <li>Lesson 07: <a href="lesson7/lazyload.html">🦥 Lazy Loading</a></li>
+                <li>Lesson 07: <a href="lesson7/lazyload.html">🦥 Lazy Loading</a> | <a href="chamber/discover.html">🔍 Discover</a></li>
                 <li>Lesson 08: <a href="">Title</a></li>
                 <li>Lesson 09: <a href="">Title</a></li>
                 <li>Lesson 10: <a href="">Title</a></li>
