📄 Added standard header

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,7 +15,31 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
-    
+    <header>
+        <div id="banner" style="display: block;">
+        <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2></div>
+        <div class="upper-header">
+          <img src="images/Chamber-logo.png" alt="São Leopoldo Chamber of Commerce logo">
+          <h1><span class="main-title">São Leopoldo</span><br/>Chamber of Commerce</h1>
+          <div class="social-media">
+            <a href="https://www.whatsapp.com/">
+              <img src="images/whatsapp_icon.png" alt="Whatsapp link"></a>
+            <a href="https://www.facebook.com/">
+              <img src="images/facebook_icon.png" alt="Facebook link"></a>
+          </div>
+        </div>
+        <nav>
+          <ul class="navigation">
+            <li><a href="#" onclick="toggleMenu()">&#9778; Menu</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="discover.html">Discover</a></li>
+            <li><a href="directory.html">Directory</a></li>
+            <li><a href="join.html">Join</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </nav>
+      <p class="currentDate"></p>
+    </header>
     <footer>
         <div class="footer-commerce-info">
           <div>
