--- a/lesson8/index.html
+++ b/lesson8/index.html
@@ -36,7 +36,7 @@
 <!-- CONTENT HERE -->
 <main>
     <h1>Course Proposal Application</h1>
-        <form method="get" action="thanks.html">
+        <form action="thanks.html" method="get">
             <fieldset>
                 <legend>Applicant Information</legend>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
