--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,28 +43,26 @@
     <main class="join-main">
         <h1>Join Us!</h1>
         <form action="thankyou.html" method="get">
-            <fieldset>
+            <fieldset class="applicant">
                 <legend>Applicant Information</legend>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
                 <label class="top">Last Name* <input type="text" name="lname" required></label>
-                <!-- To do: only accepts alpha characters, hyphens, and spaces with a minimum of 
-                    seven characters using a regular expression (Links to an external site.) pattern. -->
-                <label class="top">Business Position Title <input type="text" name="title" ></label>
+                <label class="top">Business Position Title (use only upper-case, spaces, and /):<input type="text" name="title" minlength="7" pattern="^[A-Z\s/]*$"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
                 <label class="top">Business Name* <input type="text" name="bname" required></label>
-                <!-- A business description textarea where the user can briefly describe their business. -->
+                <label class="top">Business Description <textarea name="description" rows="10" cols="65"></textarea></label>
             </fieldset>
         </form>
-        <fieldset>
+        <fieldset class="membership">
             <legend>Membership Information</legend>
             <div>Membership Level</div>
-            <label class="sbs"><input type="radio" name="audience" value="free"> FreeMembership</label>
+            <label class="sbs"><input type="radio" name="audience" value="free"> Free Membership</label>
             <label class="sbs"><input type="radio" name="audience" value="bronze"> Bronze Membership</label>
             <label class="sbs"><input type="radio" name="audience" value="silver"> Silver Membership</label>
             <label class="sbs"><input type="radio" name="audience" value="gold"> Gold Membership</label>
         </fieldset>
-        <!-- A hidden field that contains the current date and time that the form was loaded by the user. -->
+        <input type="hidden" name="dateSubmitted" id="dateSubmitted" value=""/>
         <input type="submit" value="Join" class="submitBtn">
     </main>
     <footer>
