--- a/chamber/join.html
+++ b/chamber/join.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <div id="banner" style="display: block;">
+        <div id="banner">
         <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2></div>
         <div class="upper-header">
           <img src="images/Chamber-logo.png" alt="São Leopoldo Chamber of Commerce logo">
