--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,19 +41,23 @@
       <p class="currentDate"></p>
     </header>
     <main class="join-main">
+      <div class="column-1">
         <h1>Join Us!</h1>
         <form action="thankyou.html" method="get">
             <fieldset class="applicant">
                 <legend>Applicant Information</legend>
                 <label class="top">First Name* <input type="text" name="fname" required></label>
                 <label class="top">Last Name* <input type="text" name="lname" required></label>
-                <label class="top">Business Position Title (use only upper-case, spaces, and /):<input type="text" name="title" minlength="7" pattern="^[A-Z\s/]*$"></label>
+                <label class="top">Business Position Title (use only upper-case, spaces, and /):
+                  <input type="text" name="title" minlength="7" pattern="^[A-Z\s/]*$"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                <label class="top">Phone* <input type="tel" name="phone" placeholder="1235551234" required></label>
+                <label class="top">Phone* <input type="tel" name="phone" required></label>
                 <label class="top">Business Name* <input type="text" name="bname" required></label>
                 <label class="top">Business Description <textarea name="description" rows="10" cols="65"></textarea></label>
             </fieldset>
         </form>
+      </div>
+        
         <fieldset class="membership">
             <legend>Membership Information</legend>
             <div>Membership Level</div>
@@ -62,6 +66,32 @@
             <label class="sbs"><input type="radio" name="audience" value="silver"> Silver Membership</label>
             <label class="sbs"><input type="radio" name="audience" value="gold"> Gold Membership</label>
         </fieldset>
+        <div class="membership-info">
+          <h3>About Memberships</h3>
+          <div class="free-membership">
+            <h4>Free Membership</h4>
+            <p>The Free membership is intended for Non-Profit organizations. It allows for organizations to have a place in the directory page 
+              of the São Leopoldo Chamber. It's free and it always will be!
+            </p>
+          </div>
+          <div class="bronze-membership">
+            <h4>Bronze Membership</h4>
+            <p>The Bronze membership allows you to advertise your business in the Discover page plus all the perks from the Free 
+              Membership. Bronze Memberships cost $50 a year.
+            </p>
+          </div>
+          <div class="silver-membership">
+            <h4>Silver Membership</h4>
+            <p>The Silver membership allows the business to have a presence at all events of the chamber as well as all the perks 
+              from Bronze and Free Membership. Silver Memberships cost $100 a year.
+            </p>
+          </div>
+          <div class="gold-membership">
+            <h4>Gold Membership</h4>
+            <p>Gold members have their business advertised on the home page as well as the perks from all other Memberships. The Gold 
+              Memberships cost $200 a year.</p>
+          </div>
+        </div>
         <input type="hidden" name="dateSubmitted" id="dateSubmitted" value=""/>
         <input type="submit" value="Join" class="submitBtn">
     </main>
