✍🏽 Added main content

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -41,7 +41,23 @@
       <p class="currentDate"></p>
     </header>
     <main class="directory-main">
-        
+        <h1>Business Directory</h1>
+      <div class="directory-display">
+        <div>
+          <button type="button" id="grid-display">
+            <img src="images/grid.svg" alt="Display items as a grid" />
+          </button>
+        </div>
+        <div>
+          <button type="button" id="list-display">
+            <img src="images/list.svg" alt="Display items as a list" />
+          </button>
+        </div>
+      </div>
+      <div class="cards"></div>
+      <div class="directory-list">
+        <ul id="businessList"></ul>
+      </div>
     </main>
     <footer>
         <div class="footer-commerce-info">
