--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
       </nav>
       <p class="currentDate"></p>
     </header>
-    <main class="directory-main">
+    <main class="directory">
         <h1>Business Directory</h1>
       <div class="directory-display">
         <div>
@@ -81,5 +81,7 @@
     <script src="js/getDay.js"></script>
     <script src="js/lazyLoading.js"></script>
     <script src="js/localStorage.js"></script>
+    <script src="scripts/directory.js"></script>
+    <script src="scripts/directoryDisplay.js"></script>
 </body>
 </html>
