📄✍🏽 Tweaked the membership info

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -76,14 +76,14 @@
           </div>
           <div class="bronze-membership">
             <h4>Bronze Membership</h4>
-            <p>The Bronze membership allows you to advertise your business in the Discover page plus all the perks from the Free 
+            <p>The Bronze membership allows you to advertise your business in the Directory page plus all the perks from the Free 
               Membership. Bronze Memberships cost $50 a year.
             </p>
           </div>
           <div class="silver-membership">
             <h4>Silver Membership</h4>
-            <p>The Silver membership allows the business to have a presence at all events of the chamber as well as all the perks 
-              from Bronze and Free Membership. Silver Memberships cost $100 a year.
+            <p>The Silver membership allows the business to be featured in the Discover page, have a presence at all events of the chamber, and 
+              all the perks from Bronze and Free Membership. Silver Memberships cost $100 a year.
             </p>
           </div>
           <div class="gold-membership">
