--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -79,9 +79,7 @@
     <script src="js/nav.js"></script>
     <script src="js/getCurrentDate.js"></script>
     <script src="js/getDay.js"></script>
-    <script src="js/lazyLoading.js"></script>
-    <script src="js/localStorage.js"></script>
-    <script src="scripts/directory.js"></script>
-    <script src="scripts/directoryDisplay.js"></script>
+    <script src="js/directory.js"></script>
+    <script src="js/directoryDisplay.js"></script>
 </body>
 </html>
