✍🏽 Added join ID for <main>

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,7 +40,7 @@
       </nav>
       <p class="currentDate"></p>
     </header>
-    <main class="join-main">
+    <main id="join" class="join-main">
       <div class="column-1">
         <h1>Join Us!</h1>
         <form action="thankyou.html" method="get">
