🏚 Added classes to body and main

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
 </head>
-<body>
+<body class="home-body">
   <header>
     <div id="banner">
     <h2>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2></div>
@@ -40,7 +40,7 @@
   </nav>
   <p class="currentDate"></p>
   </header>
-  <main>
+  <main class="home">
       <div class="hero">
         <div class="pop-up">
           <h2>Welcome to São Leopoldo</h2>
