--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Lesson 06: <a href="chamber/index.html">📐 Responsive Images</a></li>
                 <li>Lesson 07: <a href="lesson7/lazyload.html">🦥 Lazy Loading</a> | <a href="chamber/discover.html">🔍 Discover</a></li>
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">🎚 Table Build</a> | <a href="chamber/join.html">🤝🏽 Join</a></li></li>
-                <li>Lesson 09: <a href="">Title</a></li>
+                <li>Lesson 09: <a href="chamber/directory.html">🗃 Directory</a></li>
                 <li>Lesson 10: <a href="">Title</a></li>
                 <li>Lesson 11: <a href="">Title</a></li>
             </ul>
