--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
     li:nth-of-type(1) {
-      color: #F55D3E;
+      background-color: white;
+      color: #193d23;
     }
     li:nth-of-type(2) {
-      color: #5E5E5E;
+      color: #325895;
     }
     li:nth-of-type(3) {
-      color: #D6A207;
+      color: #1c2c4c;
     }
     main li:nth-of-type(4) {
       color: #ffffff;
@@ -42,9 +43,9 @@
   </header>
     <h1>Color Scheme</h1>
     <ul>
-        <li>Orange Soda #F55D3E</li>
-        <li>Davys Grey #5E5E5E</li>
-        <li>Goldenrod #D6A207</li>
+        <li>Dark Green #193d23</li>
+        <li>Sea Blue #325895</li>
+        <li>Dark Blue #1c2c4c</li>
         <li>White #FFFFFF</li>
     </ul>
     <p>Davys Grey will be the background color. Orange soda is going to be the main theme for the heading, footer and content.
