🎞✍🏽 Chaged placeholder text and images for content

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,9 +47,9 @@
           <a href="join.html">Join us!</a>
         </div>
         <picture>
-          <source media="(min-width:1300px)" srcset="images/large-placeholder.png">
-          <source media="(min-width:520px)" srcset="images/medium-placeholder.png">
-          <img src="images/small-placeholder.png" alt="Hero Placeholder">
+          <source media="(min-width:1300px)" srcset="images/hero-placeholder.png">
+          <source media="(min-width:520px)" srcset="images/hero-placeholder-medium.png">
+          <img src="images/hero-placeholder.png" alt="Hero Image">
         </picture>
       </div>
       <div class="event"><h2>Events</h2>
@@ -69,11 +69,9 @@
         </div>
       </div>
       <div class="news-release"><h2>News Releases</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lectus eros, 
-          cursus at feugiat eget, dignissim sed urna. Morbi arcu massa, porta nec mauris sed, 
-          accumsan suscipit nibh. Phasellus vel nisl sed nulla dictum fermentum. Sed eget dictum 
-          dui. Vivamus convallis auctor mollis. Sed egestas nibh non laoreet vehicula. Sed ac 
-          hendrerit diam, a gravida nunc.</p>
+        <p>A bunch of new businesses just joined us! We're excited to bring everyone 
+          together with our events. If you are a business, join us! If you are not, 
+          welcome home and have a look around.</p>
       </div>
       <div class="join"><h1>Join</h1>
         <img src="images/collaboration.png" alt="Three hand together">
