--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Lesson 08: <a href="lesson8/tablebuild.html">🎚 Table Build</a> | <a href="chamber/join.html">🤝🏽 Join</a></li></li>
                 <li>Lesson 09: <a href="chamber/directory.html">🗃 Directory</a></li>
                 <li>Lesson 10: <a href="">Title</a></li>
-                <li>Lesson 11: <a href="">Title</a></li>
+                <li>Lesson 11: <a href="chamber/">Chamber Project</a></li>
             </ul>
         </nav>
         <hr>
